# movies

./: .gitignore  Cargo.toml  README.md  validate.py
src/: imdb.rs  lib.rs  main.rs  movie.rs  porter.rs  tmdb.rs
